fixed create post component overflow, delete user script, primary color for dark mode, router navigation after create post and common dialog font

--- a/frontend/src/theme/global.scss
+++ b/frontend/src/theme/global.scss
@@ -182,6 +182,7 @@ ion-button {
 
 ion-modal {
   --backdrop-opacity: 0.8;
+  --border-radius: 5px;
   overflow: auto;
 
   &::part(content) {
