--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -107,19 +107,20 @@ http://ionicframework.com/docs/theming/ */
    */
 
   body {
-    --ion-color-primary: #afccff;
+    
+    /* --ion-color-primary: #afccff;
     --ion-color-primary-rgb: 175, 204, 255;
     --ion-color-primary-contrast: #000000;
     --ion-color-primary-contrast-rgb: 0, 0, 0;
     --ion-color-primary-shade: #9ab4e0;
-    --ion-color-primary-tint: #b7d1ff;
+    --ion-color-primary-tint: #b7d1ff; */
 
-    --ion-color-secondary: #50c8ff;
+    /* --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80,200,255;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255,255,255;
     --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
+    --ion-color-secondary-tint: #62ceff; */
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106,100,255;
